--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,1 +1,26 @@
 @import "tailwindcss";
+
+@theme {
+  /* Colors */
+  --color-primary-50: #ecfdf5;
+  --color-primary-100: #d1faea;
+  --color-primary-200: #a7f3d5;
+  --color-primary-300: #6ee7c0;
+  --color-primary-400: #34d5aa;
+  --color-primary-500: #14b891;
+  --color-primary-600: #0e927a;
+  --color-primary-700: #0f7665;
+  --color-primary-800: #115e52;
+  --color-primary-900: #134e46;
+
+  --color-secondary-50: #f0f9ff;
+  --color-secondary-100: #e0f2fe;
+  --color-secondary-200: #bae6fd;
+  --color-secondary-300: #7dd3fc;
+  --color-secondary-400: #38bdf8;
+  --color-secondary-500: #0ea5e9;
+  --color-secondary-600: #0284c7;
+  --color-secondary-700: #0369a1;
+  --color-secondary-800: #075985;
+  --color-secondary-900: #0c4a6e;
+}
