--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -31,3 +31,18 @@
   --color-secondary-800: #075985;
   --color-secondary-900: #0c4a6e;
 }
+
+@theme inline {
+  /* When defining theme variables that reference other variables, use the inline option. Using the inline option, the utility class will use the theme variable value instead of referencing the actual theme variable. */
+  /* Box Shadow */
+  --shadow-card: 0 0 1px rgb(from var(--color-secondary-400) r g b / 0.12),
+    0 1px 2px rgb(from var(--color-secondary-500) r g b / 0.12),
+    0 4px 8px rgb(from var(--color-secondary-500) r g b / 0.12),
+    0 8px 16px rgb(from var(--color-secondary-500) r g b / 0.12);
+  --shadow-inset: inset 0 1px 2px
+      rgb(from var(--color-secondary-500) r g b / 0.08),
+    inset 0 2px 4px rgb(var(from --color-secondary-500) r g b / 0.08);
+  --shadow-content: 0 0 1px rgb(from var(--color-gray-400) r g b / 0.15),
+    0 1px 3px rgb(from var(--color-gray-500) r g b / 0.12),
+    0 4px 8px rgb(from var(--color-gray-500) r g b / 0.1);
+}
