--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -7,7 +7,7 @@
 /* this should work: https://github.com/tailwindlabs/tailwindcss-typography/issues/372 - but just produces Can't resolve '@tailwindcss/typography' */
 /* @import "@tailwindcss/typography"; */
 
-@theme {
+@theme inline {
   /* Colors */
   --color-primary-50: #ecfdf5;
   --color-primary-100: #d1faea;
@@ -30,11 +30,11 @@
   --color-secondary-700: #0369a1;
   --color-secondary-800: #075985;
   --color-secondary-900: #0c4a6e;
-}
+  /* } */
 
-/* When defining theme variables that reference other variables, use the inline option. Using the inline option, the utility class will use the theme variable value instead of referencing the actual theme variable. */
+  /* When defining theme variables that reference other variables, use the inline option. Using the inline option, the utility class will use the theme variable value instead of referencing the actual theme variable. */
 
-/* 
+  /* 
 The bug: 
 Uncommenting this section will cause production build to miss all the custom styling (primary and secondry colors will be undefined) 
 
@@ -43,15 +43,18 @@ Things I tried:
 2. Putting both of these sections into a single `@theme` (without inline) also causes the page to lose the formatting.
 3. And finally, having a `@theme` section with colors, and `@theme inline` section with shadows referencing the colors works in dev, but causes the production to not have the primary and secondary color variables defined = loss of styling! 
 */
-@theme inline {
+  /* @theme inline { */
   --shadow-card: 0 0 1px rgb(from var(--color-secondary-400) r g b / 0.12),
     0 1px 2px rgb(from var(--color-secondary-500) r g b / 0.12),
     0 4px 8px rgb(from var(--color-secondary-500) r g b / 0.12),
     0 8px 16px rgb(from var(--color-secondary-500) r g b / 0.12);
+
   --shadow-inset: inset 0 1px 2px
       rgb(from var(--color-secondary-500) r g b / 0.08),
-    inset 0 2px 4px rgb(var(from --color-secondary-500) r g b / 0.08);
-  --shadow-content: 0 0 1px rgb(from var(--color-gray-400) r g b / 0.15),
-    0 1px 3px rgb(from var(--color-gray-500) r g b / 0.12),
-    0 4px 8px rgb(from var(--color-gray-500) r g b / 0.1);
+    inset 0 2px 4px rgb(from var(--color-secondary-500) r g b / 0.08);
+
+  /* the below definition causes the css to stop renderering in production???
+  --shadow-inset: inset 0 1px 2px
+      rgb(from var(--color-secondary-500) r g b / 0.08),
+    inset 0 2px 4px rgb(from var(--color-secondary-500) r g b / 0.08); */
 }
